# gcp-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gcp_mcp/: __init__.py  auth.py  clients.py  config.py  exceptions.py  server.py
tests/: conftest.py  test_auth.py  test_config.py  test_tools.py
